// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT Experimental/CardEditor default 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      style={
        Object {
          "height": "calc(100vh - 6rem)",
          "position": "absolute",
          "right": 0,
        }
      }
    >
      <div
        className="iot--card-editor"
      >
        <div
          className="iot--card-editor--header"
        >
          <button
            className="gallery-button iot--btn bx--btn bx--btn--sm bx--btn--ghost"
            disabled={false}
            onClick={[Function]}
            tabIndex={0}
            type="button"
          >
            Open gallery
            <svg
              aria-hidden={true}
              className="bx--btn__icon"
              fill="currentColor"
              focusable="false"
              height={16}
              preserveAspectRatio="xMidYMid meet"
              viewBox="0 0 16 16"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M4 2v2H2V2h2zm1-1H1v4h4V1zM9 2v2H7V2h2zm1-1H6v4h4V1zM14 2v2h-2V2h2zm1-1h-4v4h4V1zM4 7v2H2V7h2zm1-1H1v4h4V6zM9 7v2H7V7h2zm1-1H6v4h4V6zM14 7v2h-2V7h2zm1-1h-4v4h4V6zM4 12v2H2v-2h2zm1-1H1v4h4v-4zM9 12v2H7v-2h2zm1-1H6v4h4v-4zM14 12v2h-2v-2h2zm1-1h-4v4h4v-4z"
              />
            </svg>
          </button>
        </div>
        <div
          className="iot--card-editor--content"
        >
          <div
            className="iot--card-edit-form"
          >
            <div
              className="bx--tabs"
              role="navigation"
              selected={0}
            >
              <div
                aria-label="listbox"
                className="bx--tabs-trigger"
                onClick={[Function]}
                onKeyPress={[Function]}
                role="listbox"
                tabIndex={0}
              >
                <a
                  className="bx--tabs-trigger-text"
                  href="#"
                  onClick={[Function]}
                  tabIndex={-1}
                >
                  Configuration
                </a>
                <svg
                  aria-hidden={true}
                  fill="currentColor"
                  focusable="false"
                  height={16}
                  preserveAspectRatio="xMidYMid meet"
                  viewBox="0 0 16 16"
                  width={16}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M8 11L3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                  />
                  <title>
                    show menu options
                  </title>
                </svg>
              </div>
              <ul
                className="bx--tabs__nav bx--tabs__nav--hidden"
                role="tablist"
              >
                <li
                  aria-controls="undefined__panel"
                  aria-selected={true}
                  className="bx--tabs__nav-item bx--tabs__nav-item--selected"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="tab"
                  tabIndex={-1}
                >
                  <a
                    className="bx--tabs__nav-link"
                    href="#"
                    tabIndex={0}
                  >
                    Configuration
                  </a>
                </li>
              </ul>
            </div>
            <div
              aria-hidden={false}
              className="bx--tab-content"
              hidden={false}
              role="tabpanel"
              selected={true}
            >
              <div
                className="iot--card-edit-form--content"
              >
                <div
                  className="iot--card-edit-form--input"
                >
                  <div
                    className="bx--form-item bx--text-input-wrapper bx--text-input-wrapper--light"
                  >
                    <label
                      className="bx--label"
                      htmlFor="title"
                    >
                      Card title
                    </label>
                    <div
                      className="bx--text-input__field-outer-wrapper"
                    >
                      <div
                        className="bx--text-input__field-wrapper"
                        data-invalid={null}
                        data-warn={null}
                      >
                        <input
                          className="bx--text-input bx--text__input bx--text-input--light"
                          disabled={false}
                          id="title"
                          onChange={[Function]}
                          onClick={[Function]}
                          type="text"
                          value="Calculated"
                        />
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  className="iot--card-edit-form--input"
                >
                  <div
                    className="bx--form-item"
                  >
                    <label
                      className="bx--label"
                      htmlFor="description"
                    >
                      Description (Optional)
                    </label>
                    <div
                      className="bx--text-area__wrapper"
                      data-invalid={null}
                    >
                      <textarea
                        aria-describedby={null}
                        aria-invalid={null}
                        className="bx--text-area bx--text-area--light"
                        cols={50}
                        disabled={false}
                        id="description"
                        onChange={[Function]}
                        onClick={[Function]}
                        placeholder=""
                        rows={4}
                      />
                    </div>
                  </div>
                </div>
                <div
                  className="iot--card-edit-form--input"
                >
                  <div
                    className="bx--dropdown__wrapper bx--list-box__wrapper"
                  >
                    <label
                      className="bx--label"
                      htmlFor="downshift-0-toggle-button"
                      id="downshift-0-label"
                    >
                      Size
                    </label>
                    <div
                      className="bx--dropdown bx--dropdown--light bx--list-box bx--list-box--light"
                      id="size"
                      onClick={[Function]}
                      onKeyDown={[Function]}
                    >
                      <button
                        aria-disabled={false}
                        aria-expanded={false}
                        aria-haspopup="listbox"
                        aria-labelledby="downshift-0-label downshift-0-toggle-button"
                        className="bx--list-box__field"
                        disabled={false}
                        id="downshift-0-toggle-button"
                        onClick={[Function]}
                        onKeyDown={[Function]}
                        type="button"
                      >
                        <span
                          className="bx--list-box__label"
                        >
                          Medium thin (4x2)
                        </span>
                        <div
                          className="bx--list-box__menu-icon"
                        >
                          <svg
                            aria-label="Open menu"
                            fill="currentColor"
                            focusable="false"
                            height={16}
                            name="chevron--down"
                            preserveAspectRatio="xMidYMid meet"
                            role="img"
                            viewBox="0 0 16 16"
                            width={16}
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M8 11L3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                            />
                            <title>
                              Open menu
                            </title>
                          </svg>
                        </div>
                      </button>
                      <div
                        aria-labelledby="downshift-0-label"
                        className="bx--list-box__menu"
                        id="downshift-0-menu"
                        onBlur={[Function]}
                        onKeyDown={[Function]}
                        onMouseLeave={[Function]}
                        role="listbox"
                        tabIndex={-1}
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="iot--card-edit-form--footer"
            >
              <button
                className="iot--btn bx--btn bx--btn--sm bx--btn--tertiary"
                disabled={false}
                onClick={[Function]}
                tabIndex={0}
                type="button"
              >
                Open JSON editor
                <svg
                  aria-hidden={true}
                  className="bx--btn__icon"
                  fill="currentColor"
                  focusable="false"
                  height={16}
                  preserveAspectRatio="xMidYMid meet"
                  viewBox="0 0 32 32"
                  width={16}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M31 16L24 23 22.59 21.59 28.17 16 22.59 10.41 24 9 31 16zM1 16L8 9 9.41 10.41 3.83 16 9.41 21.59 8 23 1 16z"
                  />
                  <path
                    d="M5.91 15H26.080000000000002V17H5.91z"
                    transform="rotate(-75 15.996 16)"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT Experimental/CardEditor interactive 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div>
      <div
        style={
          Object {
            "position": "absolute",
          }
        }
      >
        <pre>
          {
    "title": "New card",
    "size": "SMALL",
    "type": "VALUE",
    "id": "card-1"
}
        </pre>
      </div>
      <div
        style={
          Object {
            "height": "calc(100vh - 6rem)",
            "position": "absolute",
            "right": 0,
          }
        }
      >
        <div
          className="iot--card-editor"
        >
          <div
            className="iot--card-editor--header"
          >
            <button
              className="gallery-button iot--btn bx--btn bx--btn--sm bx--btn--ghost"
              disabled={false}
              onClick={[Function]}
              tabIndex={0}
              type="button"
            >
              Open gallery
              <svg
                aria-hidden={true}
                className="bx--btn__icon"
                fill="currentColor"
                focusable="false"
                height={16}
                preserveAspectRatio="xMidYMid meet"
                viewBox="0 0 16 16"
                width={16}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M4 2v2H2V2h2zm1-1H1v4h4V1zM9 2v2H7V2h2zm1-1H6v4h4V1zM14 2v2h-2V2h2zm1-1h-4v4h4V1zM4 7v2H2V7h2zm1-1H1v4h4V6zM9 7v2H7V7h2zm1-1H6v4h4V6zM14 7v2h-2V7h2zm1-1h-4v4h4V6zM4 12v2H2v-2h2zm1-1H1v4h4v-4zM9 12v2H7v-2h2zm1-1H6v4h4v-4zM14 12v2h-2v-2h2zm1-1h-4v4h4v-4z"
                />
              </svg>
            </button>
          </div>
          <div
            className="iot--card-editor--content"
          >
            <div
              className="iot--card-edit-form"
            >
              <div
                className="bx--tabs"
                role="navigation"
                selected={0}
              >
                <div
                  aria-label="listbox"
                  className="bx--tabs-trigger"
                  onClick={[Function]}
                  onKeyPress={[Function]}
                  role="listbox"
                  tabIndex={0}
                >
                  <a
                    className="bx--tabs-trigger-text"
                    href="#"
                    onClick={[Function]}
                    tabIndex={-1}
                  >
                    Configuration
                  </a>
                  <svg
                    aria-hidden={true}
                    fill="currentColor"
                    focusable="false"
                    height={16}
                    preserveAspectRatio="xMidYMid meet"
                    viewBox="0 0 16 16"
                    width={16}
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M8 11L3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                    />
                    <title>
                      show menu options
                    </title>
                  </svg>
                </div>
                <ul
                  className="bx--tabs__nav bx--tabs__nav--hidden"
                  role="tablist"
                >
                  <li
                    aria-controls="undefined__panel"
                    aria-selected={true}
                    className="bx--tabs__nav-item bx--tabs__nav-item--selected"
                    onClick={[Function]}
                    onKeyDown={[Function]}
                    role="tab"
                    tabIndex={-1}
                  >
                    <a
                      className="bx--tabs__nav-link"
                      href="#"
                      tabIndex={0}
                    >
                      Configuration
                    </a>
                  </li>
                </ul>
              </div>
              <div
                aria-hidden={false}
                className="bx--tab-content"
                hidden={false}
                role="tabpanel"
                selected={true}
              >
                <div
                  className="iot--card-edit-form--content"
                >
                  <div
                    className="iot--card-edit-form--input"
                  >
                    <div
                      className="bx--form-item bx--text-input-wrapper bx--text-input-wrapper--light"
                    >
                      <label
                        className="bx--label"
                        htmlFor="title"
                      >
                        Card title
                      </label>
                      <div
                        className="bx--text-input__field-outer-wrapper"
                      >
                        <div
                          className="bx--text-input__field-wrapper"
                          data-invalid={null}
                          data-warn={null}
                        >
                          <input
                            className="bx--text-input bx--text__input bx--text-input--light"
                            disabled={false}
                            id="title"
                            onChange={[Function]}
                            onClick={[Function]}
                            type="text"
                            value="New card"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    className="iot--card-edit-form--input"
                  >
                    <div
                      className="bx--form-item"
                    >
                      <label
                        className="bx--label"
                        htmlFor="description"
                      >
                        Description (Optional)
                      </label>
                      <div
                        className="bx--text-area__wrapper"
                        data-invalid={null}
                      >
                        <textarea
                          aria-describedby={null}
                          aria-invalid={null}
                          className="bx--text-area bx--text-area--light"
                          cols={50}
                          disabled={false}
                          id="description"
                          onChange={[Function]}
                          onClick={[Function]}
                          placeholder=""
                          rows={4}
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    className="iot--card-edit-form--input"
                  >
                    <div
                      className="bx--dropdown__wrapper bx--list-box__wrapper"
                    >
                      <label
                        className="bx--label"
                        htmlFor="downshift-1-toggle-button"
                        id="downshift-1-label"
                      >
                        Size
                      </label>
                      <div
                        className="bx--dropdown bx--dropdown--light bx--list-box bx--list-box--light"
                        id="size"
                        onClick={[Function]}
                        onKeyDown={[Function]}
                      >
                        <button
                          aria-disabled={false}
                          aria-expanded={false}
                          aria-haspopup="listbox"
                          aria-labelledby="downshift-1-label downshift-1-toggle-button"
                          className="bx--list-box__field"
                          disabled={false}
                          id="downshift-1-toggle-button"
                          onClick={[Function]}
                          onKeyDown={[Function]}
                          type="button"
                        >
                          <span
                            className="bx--list-box__label"
                          >
                            Small (4x1)
                          </span>
                          <div
                            className="bx--list-box__menu-icon"
                          >
                            <svg
                              aria-label="Open menu"
                              fill="currentColor"
                              focusable="false"
                              height={16}
                              name="chevron--down"
                              preserveAspectRatio="xMidYMid meet"
                              role="img"
                              viewBox="0 0 16 16"
                              width={16}
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M8 11L3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                              />
                              <title>
                                Open menu
                              </title>
                            </svg>
                          </div>
                        </button>
                        <div
                          aria-labelledby="downshift-1-label"
                          className="bx--list-box__menu"
                          id="downshift-1-menu"
                          onBlur={[Function]}
                          onKeyDown={[Function]}
                          onMouseLeave={[Function]}
                          role="listbox"
                          tabIndex={-1}
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                className="iot--card-edit-form--footer"
              >
                <button
                  className="iot--btn bx--btn bx--btn--sm bx--btn--tertiary"
                  disabled={false}
                  onClick={[Function]}
                  tabIndex={0}
                  type="button"
                >
                  Open JSON editor
                  <svg
                    aria-hidden={true}
                    className="bx--btn__icon"
                    fill="currentColor"
                    focusable="false"
                    height={16}
                    preserveAspectRatio="xMidYMid meet"
                    viewBox="0 0 32 32"
                    width={16}
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M31 16L24 23 22.59 21.59 28.17 16 22.59 10.41 24 9 31 16zM1 16L8 9 9.41 10.41 3.83 16 9.41 21.59 8 23 1 16z"
                    />
                    <path
                      d="M5.91 15H26.080000000000002V17H5.91z"
                      transform="rotate(-75 15.996 16)"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT Experimental/CardEditor with no card defined (gallery view) 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      style={
        Object {
          "height": "calc(100vh - 6rem)",
          "position": "absolute",
          "right": 0,
        }
      }
    >
      <div
        className="iot--card-editor"
      >
        <div
          className="iot--card-editor--content"
        >
          <div
            className="iot--list iot--list__full-height"
          >
            <div
              className="iot--list-header-container"
            >
              <div
                className="iot--list-header"
              >
                <div
                  className="iot--list-header--title"
                >
                  Gallery
                </div>
                <div
                  className="iot--list-header--btn-container"
                />
              </div>
            </div>
            <div
              className="iot--list--content__full-height iot--list--content"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;
